# kinova_robust_control

./: LICENSE  README.md  config_example.yaml  index.html
customized_msgs/: CMakeLists.txt  README.md  package.xml
customized_msgs/include/customized_msgs/: Messages.hpp
customized_msgs/srv/: Bool.srv  GripperAction.srv  RefreshJoints.srv
dynamics/: CMakeLists.txt  README.md  package.xml
dynamics/include/dynamics/: ARMOURControlBlock.hpp  ControllerBlock.hpp  GravityCompensationPIDControlBlock.hpp  Model.hpp  PIDControlBlock.hpp  PassivityControlBlock.hpp  RNEA.hpp  Spatial.hpp
dynamics/src/dynamics/: ARMOURControlBlock.cpp  ControllerBlock.cpp  GravityCompensationPIDControlBlock.cpp  Model.cpp  PIDControlBlock.cpp  PassivityControlBlock.cpp  RNEA.cpp  Spatial.cpp
dynamics/test/: TestInverseDynamics.cpp  test_pybind.py  test_urdf_mjcf.py
experiments/: CMakeLists.txt  README.md  package.xml
experiments/experiments/: services.py
experiments/scripts/: pick_up_example.py  test_armtd_trajectories.py  test_multiple_continuous_trajectories.py  test_receding_horizon_trajectories.py  test_receding_horizon_trajectories_armtd.py  test_services.py  test_trajectories.py  test_trajectories_dual_arm.py  trajectory_helper.py
filter/: CMakeLists.txt  package.xml
filter/include/filter/: FilterBlock.hpp  Filters.hpp
filter/src/: nothing.cpp
filter/test/: filter_test.cpp
images/: patrick.jfif
installation/: README.md
kortex/: CMakeLists.txt  README.md  package.xml
kortex/include/kortex/: JointFilterBlock.hpp  KortexBlock.hpp  KortexRobot.hpp
kortex/src/: control_system.cpp  ros_kortex_system.cpp
kortex/src/kortex/: JointFilterBlock.cpp  KortexBlock.cpp  KortexRobot.cpp
kortex/test/: cartesian_control_test.py  kortex_test.cpp
roahm_dynamics/: CMakeLists.txt  README.md  package.xml
roahm_dynamics/include/roahm_dynamics/: ARMOURControlBlock.hpp  ControllerAnalysisBlock.hpp  ControllerBlock.hpp  GravityCompensationPIDControlBlock.hpp  Model.hpp  PIDControlBlock.hpp  PassivityControlBlock.hpp  RNEA.hpp  Spatial.hpp
roahm_dynamics/src/roahm_dynamics/: ARMOURControlBlock.cpp  ControllerAnalysisBlock.cpp  ControllerBlock.cpp  GravityCompensationPIDControlBlock.cpp  Model.cpp  PIDControlBlock.cpp  PassivityControlBlock.cpp  RNEA.cpp  Spatial.cpp
roahm_dynamics/test/: TestInverseDynamics.cpp  test_pybind.py  test_urdf_mjcf.py
roahm_experiments/: CMakeLists.txt  README.md  package.xml
roahm_experiments/exciting_trajectories/: exciting-solution-1.csv
roahm_experiments/roahm_experiments/: base_experiment.py  services.py  sin_experiment.py
roahm_experiments/scripts/: ik_and_rrt_example_control_system.py  parse_rosbag.py  pick_up_and_down_example.py  pick_up_example.py  pinocchio_ik_solver.py  run_armour_exciting_trajectories.py  run_complete_armour_demo.py  run_exciting_trajectories.py  run_experiment.py  run_online_sysid_demo.py  run_online_sysid_demo_harder.py  run_predefined_armour_exciting_trajectories.py  run_receding_armour_exciting_trajectories.py  test_armtd_trajectories.py  test_multiple_continuous_trajectories.py  test_receding_horizon_trajectories.py  test_receding_horizon_trajectories_armtd.py  test_services.py  test_trajectories.py  test_trajectories_dual_arm.py  test_waypoints.py  trajectory_helper.py
roahm_filter/: CMakeLists.txt  package.xml
roahm_filter/include/roahm_filter/: FilterBlock.hpp  Filters.hpp
roahm_filter/src/: nothing.cpp
roahm_filter/test/: filter_test.cpp
roahm_kortex/: CMakeLists.txt  README.md  package.xml
roahm_kortex/include/roahm_kortex/: JointFilterBlock.hpp  KortexBlock.hpp  KortexRobot.hpp
roahm_kortex/launch/: deform.launch.py  force_closure_demo.launch.py  gravity_compensator.launch.py  online.launch.py
roahm_kortex/src/: control_system.cpp  ros_kortex_system.cpp
roahm_kortex/src/roahm_kortex/: JointFilterBlock.cpp  KortexBlock.cpp  KortexRobot.cpp
roahm_kortex/test/: cartesian_control_test.py  kortex_test.cpp
roahm_msgs/: CMakeLists.txt  README.md  package.xml
roahm_msgs/include/roahm_msgs/: Messages.hpp
roahm_msgs/msg/: Debug.msg  KortexMeasurements.msg  TorqueControl.msg  TrajectoryMsg.msg
roahm_msgs/srv/: Goto.srv  GotoCartesian.srv  GotoName.srv  RefreshJoints.srv
roahm_planner/: CMakeLists.txt  package.xml
roahm_planner/scripts/: play_bernstein_traj.py  play_multiple_bernstein.py  play_trajectory.py
roahm_system/: CMakeLists.txt  README.org  package.xml
roahm_system/test/: block_test.cpp  port_test.cpp  system_test.cpp
roahm_trajectories/: CMakeLists.txt  README.md  package.xml
roahm_trajectories/include/roahm_trajectories/: ArmourBezierCurve.hpp  ArmtdCurve.hpp  FifthOrderBezierCurve.hpp  FixedFrequencyFourierCurve.hpp  Trajectories.hpp  TrajectoryManager.hpp  TrajectoryPybindWrapper.hpp
roahm_trajectories/roahm_trajectories/: TrajectoryMacros.py
roahm_trajectories/src/: roahm_trajectories_pybind.cpp
roahm_trajectories/src/roahm_trajectories/: Trajectories.cpp  TrajectoryManager.cpp  TrajectoryPybindWrapper.cpp
roahm_trajectories/test/: TestArmourBezierCurve.cpp  TestBezierCurve.cpp  TestFixedFrequencyFourierCurve.cpp  TestTrajectoryManager.cpp
roahm_utils/: CMakeLists.txt  package.xml
roahm_utils/test/: logger_test.cpp  signal_test.cpp
system/: CMakeLists.txt  package.xml
system/include/system/: BaseBlock.hpp  (+4 more)
system/test/: block_test.cpp  port_test.cpp  system_test.cpp
trajectories/: CMakeLists.txt  README.md  package.xml
trajectories/include/trajectories/: ArmourBezierCurve.hpp  ArmtdCurve.hpp  FifthOrderBezierCurve.hpp  FixedFrequencyFourierCurve.hpp  Trajectories.hpp  TrajectoryManager.hpp  TrajectoryPybindWrapper.hpp
trajectories/src/: trajectories_pybind.cpp
trajectories/src/trajectories/: Trajectories.cpp  TrajectoryManager.cpp  TrajectoryPybindWrapper.cpp
trajectories/test/: TestArmourBezierCurve.cpp  TestBezierCurve.cpp  TestFixedFrequencyFourierCurve.cpp  TestTrajectoryManager.cpp
utils/: CMakeLists.txt  package.xml
utils/include/utils/: Logger.hpp  Utils.hpp
utils/src/utils/: Utils.cpp
utils/test/: logger_test.cpp  signal_test.cpp
(+15 files in other folders)
