<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roahm_dynamics</name>
  <version>0.0.0</version>
  <description>Contain dynamics algorithms</description>
  <maintainer email="cctom@umich.edu">Che Chen</maintainer>
  <license>MIT</license>
  <author email="cctom@umich.edu">C.C</author>
  <author email="rajivbh@umich.edu">Rajiv</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>roahm_utils</depend>
  <depend>roahm_system</depend>
  <depend>roahm_trajectories</depend>
  <depend>roahm_msgs</depend>
  <depend>pybind11_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
