<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roahm_msgs</name>
  <version>0.0.0</version>
  <description>The roahm_msgs package contains message types</description>
  <maintainer email="cctom@umich.edu">Che Chen</maintainer>
  <license>3-clause BSD</license>
  <author email="cctom@umich.edu">C.C</author>
  <author email="rajivbh@umich.edu">Rajiv</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <depend>roahm_utils</depend>
  <depend>roahm_trajectories</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- message -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
