<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roahm_trajectories</name>
  <version>0.0.0</version>
  <description>Contain multiple trajectory definition and implementation</description>
  <maintainer email="jimzhang@umich.edu">Bohao Zhang</maintainer>
  <license>3-clause BSD</license>
  <author email="jimzhang@umich.edu">Bohao Zhang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roahm_utils</depend>
  <depend>roahm_system</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
